@@ -32,6 +32,10 @@ AUX mozilla-1568569.patch 1939 BLAKE2B 73ccb9b747a3c7639d68743c6a7889d2cdc0f7840
 AUX mozilla-1603112-accept-lang.patch 543 BLAKE2B d8ee0aec9e4734395c51739dcfb92d2f7725f00288fad322943820bd2b68ec691f6139fc59b79d50d19973bf7737e34f3b6e894b19bc7fcc672c7ad01d20a1c1 SHA512 fc62aa9830f243e02aebb8398c0f75f834fc71f197be12201efe1fc2e3779b0abe0c0a6eee63ff419863155f2851ad725149b26bfd06bf5e52496aece31124af
 AUX mozilla-bug1601707-gcc-fixup-72.patch 4254 BLAKE2B 7e3a16b7de0ce4e1cec035fac128b45dbbeca853d7b5f4884ceb461e321848ff51d962e3040f5ffc41f156e82ac9c7787059ad66f91bf2b2f9f7c2517fbdf496 SHA512 b46a5c5206bb8ff0dc39106c4ff86d14afe14cd4c00fe4b5aa3d0b7bab975d8cce0b95b59b682632a37a6a8ffe7aa4b88e99081064609bfb9073e05dc3a78234
 AUX privacy.js-1 3268 BLAKE2B c23c5d9a2f1fe41446ffb49de09bff8514fb791b812ca4f7d64d6116c424aabfe4150bf3693fbbbdbe8941ccfab77a895993d4e589c42f6729191e5fb3ae1869 SHA512 9ca00c0a94e5a3a4a376863ab3c97922db219c1aa8193884e6c488c852dc4e7402fa41cd56e1aa21cc7b228b689c0bcb9bf9eb3dc708ca08145f18883986f463
+DIST firefox--firefox-branded-icons.patch 1900 BLAKE2B 0ddfabc4130be8fc76c9393f1b66f80df86ac39e4ab9f4487f03216ebae78152b1afd83eb10c83870ae33caa3801053e699447f3ea4cfecb0509a496c3e179ee SHA512 269c0692dda73e4cd450883b0d2f8a752d8ed118ef125e51383bf1f6efb1abe2024f23536998bebf29550b87cc8bd94dac2b8a8697370c603b782e8e2e3ee069
+DIST firefox--firefox-kde.patch 9516 BLAKE2B e6ca155914efedafbe2fffca264612e572ed765a4dcb504e5af5cc8f05edbf243b53b13edcc6efd61e374a5341f72e1a8628e227db6aa41541cf37a9b5ece28c SHA512 6724fda825c3647a18e3dc9516421d89c92d958b032c374bfa5afb6ff56f2fff439f2d2ab6dee5a077bc2704239407d12317a05b07e34c4bdf777722b0ec9da0
+DIST firefox--mozilla-kde.patch 63434 BLAKE2B 4d9e8fe360d7adf73bad761960bf23247f02659c16734041652928a56ad543048f2c34d96d23849942bbc3d3407e69175d845eb3e81126d7bdda8c59a44681cf SHA512 3ca6d5e7cf5cdb66a760f0683320e0253f46c59bbc47e80f9dc67aa188254276c0ba101174f9c82a0e938d1ad22399794d10f37a582d90cb7d428e2868d24d0f
+DIST firefox--mozilla-nongnome-proxies.patch 1806 BLAKE2B 2df3ac51dacabcc2821d3ae62ed895fea696d56d4786a02c9a051b58b59c1959f506fbc611e5a67dc71aaab89b14b41ce0f526e89136ff0bab6af0ef99d25099 SHA512 4812537f0b2587705ac765919c4a6187930c5b4d83188351ea1b691bf856a22cef19ce247b88d176209a3d9e1a31d17289e813e00926ad531c1cf0b8ebc2aee0
 DIST firefox-70.0-firefox-branded-icons.patch 1900 BLAKE2B 63786d92d82519d264f1981c08c5d6727e41c42171a4756ea610f01f5734e826f65229ba1c525e1d0c3590bd70a8b81cfd2168ad90ecd8d79811145b9ca0d8cb SHA512 3eecc53bcf75b9ec1312a1681cc2b0550ea4ff8df45819dfa8c1bb60f362cf0c23fa7e7201887cc4a2718c2046221680f2fffd2e6c7c3dd5abab0fe00e1bde9b
 DIST firefox-70.0-firefox-kde.patch 9539 BLAKE2B 8ff5236aecbfedf098b545ef8c4d87ef5f252883fbbe789476f3494f9bf3e4d4aae0c69fcf3d7588e97b83b7d27eaf1e2276e69d8f8074ba1412c6de22ebe891 SHA512 fbbe27803f227e6fbb933c14886748d3424116810cfa217a6b0b952649a32e5fec4a2c591adac6f9d88204d8bc667b444909737570df01d0fbbe3538caa02dac
 DIST firefox-70.0-mozilla-kde.patch 63062 BLAKE2B e4c286e03bb447de308318c8a3b0a4787b2e332caf11ea33408076e39fadadefcaae017283096ac0cb2c0a66d8e35a8863421c8eab4aba01c8690493c9954600 SHA512 1a5b333d02e1feae2bf755f16c7b5a0d857b6bfbc25df429b3d9d364bf6c155d7efc5389495c687e504dee265180f4f923318066e1345564975494f30947d8dc
@@ -323,10 +327,6 @@ DIST firefox-77.0.1-xh.xpi 478153 BLAKE2B dcd5c4e59100cd837b39e4203d4d4627265366
 DIST firefox-77.0.1-zh-CN.xpi 596100 BLAKE2B 440edc453f303cb4d90f9b665bd0ab421b3dd8849fe645ab02dff2111c7c1efe7c045f8c9febb68d536a51f10f4cbb496eafa39071af6431d11428d0638426fd SHA512 80aa55cc304cddd9fc299b1601ca20642129d23dac1807647fc7e14dcd868825b239baa239809ffb459c1685042e1433699bb3f9d86553eae83f8919fc1a32c2
 DIST firefox-77.0.1-zh-TW.xpi 595265 BLAKE2B 305b43f078a6696f63f721669180b502c2211a7a5d40682f4148e33015f921346865fb3df55a5b8a56fe92a6a86a3ab0ff0bd3f2cd0318e2299ab8dc17c70898 SHA512 5ab6fb6973146b47d5886c93481e010dc8dac0efe0f6ec4f8897cde2539a52a28850b460c27067657ef8a66ab555bce6201da6a3c1f27bc56214f1d9329674af
 DIST firefox-77.0.1.source.tar.xz 334037816 BLAKE2B 94aea1f4b39422333aeda71d296087f3309b595331488666641b20660607373d59f90d6840bafac6f83c3b5fb952f1a5d44a0972549ff9cf9a35a5036eb1565d SHA512 9e02e2842d18b9c94b24457788f117fad4730ca21d05ef8208eb85c6f58da3b0e75fcae8c8ebd38f69b86325b26684d0e5409b3d341898fe28b607e8bd949ef2
-DIST firefox-78.0-firefox-branded-icons.patch 1900 BLAKE2B 0ddfabc4130be8fc76c9393f1b66f80df86ac39e4ab9f4487f03216ebae78152b1afd83eb10c83870ae33caa3801053e699447f3ea4cfecb0509a496c3e179ee SHA512 269c0692dda73e4cd450883b0d2f8a752d8ed118ef125e51383bf1f6efb1abe2024f23536998bebf29550b87cc8bd94dac2b8a8697370c603b782e8e2e3ee069
-DIST firefox-78.0-firefox-kde.patch 9516 BLAKE2B e6ca155914efedafbe2fffca264612e572ed765a4dcb504e5af5cc8f05edbf243b53b13edcc6efd61e374a5341f72e1a8628e227db6aa41541cf37a9b5ece28c SHA512 6724fda825c3647a18e3dc9516421d89c92d958b032c374bfa5afb6ff56f2fff439f2d2ab6dee5a077bc2704239407d12317a05b07e34c4bdf777722b0ec9da0
-DIST firefox-78.0-mozilla-kde.patch 63417 BLAKE2B 7dced3137f67e262d43822e269963cb68b6ddf8774ebea7543962548f6286ff8b5dec63cbbe5885ffa412a7931f103363ae2b0851b342bb9c5955460daae7408 SHA512 467516c26ac770cd4da1dfaa616e77457fbe7f0efcd88c263dd9465245acbee4b186f7e1f9704655db6a4bc9526a6503696c01b8940b991f8bab7d2527fcaa40
-DIST firefox-78.0-mozilla-nongnome-proxies.patch 1806 BLAKE2B 2df3ac51dacabcc2821d3ae62ed895fea696d56d4786a02c9a051b58b59c1959f506fbc611e5a67dc71aaab89b14b41ce0f526e89136ff0bab6af0ef99d25099 SHA512 4812537f0b2587705ac765919c4a6187930c5b4d83188351ea1b691bf856a22cef19ce247b88d176209a3d9e1a31d17289e813e00926ad531c1cf0b8ebc2aee0
 DIST firefox-78.0-patches-05.tar.xz 31096 BLAKE2B 83915ede6e9dc2241f6c72eb41f1ba9e26d70cb1f968bc6f3506aa4596d282f6c9a433ce5151c1e0e69dc8343bcd17ed517db5ad5990f744362cc80c50154886 SHA512 4cc967dbdd0c76000ce565d85064884b7040e1f50fba830203256d06a6ee1f8004f4e64682b98fbfb5580254d67e8984b19ec34cee2c3d85190a8f214b05afa2
 DIST firefox-78.0.2-ach.xpi 500654 BLAKE2B bf3fef912634343b67525a5e7c9c0d655ed4a29ed18d526d4a700e84051e7bf44f2198dfdefd1f2bfcf988fd28473737fd268fbbf8b2fb6dce1c513e2d28c18e SHA512 56d25bb5a42959516ef75eb7f6d04f20dc003de69febea872706a4ae1d48115ba42ea678c84f9cf8685cda12268475916337fded23498bdf90eafbbafb553fcd
 DIST firefox-78.0.2-af.xpi 444068 BLAKE2B a152864485b8d31194851de9360c8665ff0ee67c0c2e20aa685249c9bcda4ba066dfb1c0974586adead9e4cabdd3f8866ed4f5120955bc830229738cfd38addc SHA512 5016b0f236f9b1943409dd50c562235cb742eec78957eeda5bb6d154ba7c901d97342ae91fbebf7f0d5615ea6a311deaa23bd5a45fd24159c3fc3c58216b3aa2
@@ -423,7 +423,7 @@ DIST firefox-78.0.2.source.tar.xz 334406116 BLAKE2B ecddeee641a61409cf603afe97c3
 EBUILD firefox-70.0.1.ebuild 29924 BLAKE2B d4a849c6d5ccd1a68eb145c49a0275e03dbb115842e05981408d35f14c6e194426dace48d086930f9f2dc26bd00173591ff6fceb31cbb4770476440aa1942c27 SHA512 bec3ccf5df0fe6deb66a43071f6dd87b4835cbdcff4d1c18d1189cb57a6c8d79377bc6ddfbf3bcb82e5b6fb5f8cd6e3a69e9e7a7782ad7b0693e5838996dfa62
 EBUILD firefox-72.0.2.ebuild 30859 BLAKE2B 1310d943ff916479ce8ca23cfaf964845476f9c895ff05607422c35181b1f4e8b00a9882fe206e66bcb5fd2dfd717d504c9c8de5bd4b5e08b2c19c556716392c SHA512 bf907da507c542b300f64346ad5fad9c3070504091af4662dbf794e771737307b3b9442853ec6c40dbd1d25c7ef921bc5f136cbe4318268403aa2c7dbedc4677
 EBUILD firefox-77.0.1-r1.ebuild 32901 BLAKE2B fc71e6d793b90b0fc2aa22bb82c82fed337b15655b8fa39fc4aa68fdf1a53e69e1a4d8dace0656ba5b053ca11b39ff27cc464002801f7ac1ff0749d3027a2810 SHA512 68c57f8e41a99aec812d56d07aaf792ffd7bd6c7a7ca8bf64d48c521ef9a20cf6a3731213e3fa098e81104d376d8a5a7c948e813ef78fba92d082b26b555c61d
-EBUILD firefox-78.0.2-r1.ebuild 34117 BLAKE2B 91f2436cbafa536277a051bf5cf4f2b76931ebce574d83c786055b5e49a493c5bf10a9eb2bc79cd9218bc29921852d971214f68a51a210e87b40535c953da241 SHA512 35ac518576fd4b52415a80ce1b74004d018a51709da8d8d96a773e3e97e72b7488972f48c56a4ce8c032399a8a524c7e933d25acb884d1315aa2b8d182c2214a
-MISC ChangeLog 2760 BLAKE2B 5b193ab790f159363a67c2d4391972e23e35bd8c01decf07a4683c111f07763aec5f317a2555d691757d94ac09327d1436ef972eaaa4e686d7f19ec98695749e SHA512 51448c3e2d06328736e717f13c628158b8b6967c7f2873582c930cdf237dd219f6c0d90a72c80831de83ffc057db1a211ede8d2fc70bb1a90dfb8332ef12563e
+EBUILD firefox-78.0.2-r1.ebuild 33874 BLAKE2B 41b29d5a7e8163da30451add176b74ea26242a4b7524864f0d5adbee1074051f5665cc8a9fc1084fe11f0853154d97cc049bcb63d14379e6028cbf66572cff11 SHA512 9d9176ad54944544bb839f997d9025cb8bb04466a5d0cd0c60ae7896a92bd01b6f312b982e5daa2cecbcd7eef0721232000c4b0da2c20a5a6dc9de48111a14b1
+MISC ChangeLog 2828 BLAKE2B 1891da362b27daa32dabf2523b41a51ac15ed71f801bec2055eceb22bdb44acf155a293575a419179dc3e71614d5618c46cc4a8f2d38fb24d91c2a882265a174 SHA512 1aad06f4df4891045673550cfb1b170bb7299833c779e47005f1c536972ca66fc311e6397ff1e589a3232be99b550f1520e6ccdf988bddea8364d9f4227a256d
 MISC firefox-62.0-r2 22407 BLAKE2B f3bc12921a49d0d70e4d3c7eaa76ce5e659908099b5b43832f5558f7f6b3ec2042a91dcffd53930ff31710099fd332ebb6a44576936bcfa6d46b61637c4ae132 SHA512 82a2aa6f7e97d01b75b978f2c4da034df1d3315b994cdcc24f055df6b557e1b3bbd9c114616a1895a14672acc3620719c920e4021397d605949f14549db7e284
-MISC metadata.xml 2016 BLAKE2B cae6e08d3bd50a397b2d16aaf4b581c35b50e21780ce573db8f7164619ac51c3551d7c0667418b985789a8921de31c84048b1e5df2ed4130634a9c187c491acb SHA512 a33156dec672dfb5413eefca513e01e01b2e195e5d439c622c0c92edb61165bb26e9a04e07dadf5c9fb90f5aeeba12ad0a319e8adc7b94d7a021f8ec25e4a5ff
+MISC metadata.xml 2979 BLAKE2B e1e69d5325e4d7680530ef1d4615c62bdce6998b0c029967c69cad273abc69663f57dcb4caed3b082e73360086c240a1ff5c7a2c3aa82e282e17452dd251c0e4 SHA512 708cf4b326f4bb9b3f4e841e38983a224f9534593b01ada06eda496e4b36c68cae7f1c0da84741d72143d894bad69f242c106cd4fe4d5eacdec492f21236486d
