@@ -16,11 +16,6 @@ he hi-IN hr hsb hu hy-AM ia id is it ja ka kab kk km kn ko lij lt lv mk mr ms my
 nb-NO nl nn-NO oc pa-IN pl pt-BR pt-PT rm ro ru si sk sl son sq sr sv-SE ta te
 th tr uk ur uz vi xh zh-CN zh-TW )
 
-# Convert the ebuild version to the upstream mozilla version, used by mozlinguas
-MOZ_PV="${PV/_alpha/a}" # Handle alpha for SRC_URI
-MOZ_PV="${MOZ_PV/_beta/b}" # Handle beta for SRC_URI
-MOZ_PV="${MOZ_PV%%_rc*}" # Handle rc for SRC_URI
-
 # Patch version
 PATCH="${PN}-78.0-patches-05"
 
@@ -30,7 +25,7 @@ MOZ_HTTP_URI="https://archive.mozilla.org/pub/${PN}/releases"
 HG_MOZ_REVISION="4ac678bd2a26"
 HG_MOZ_PV="${MOZ_PV/%.*/.0}"
 HG_MOZILLA_URI="https://www.rosenauer.org/hg/mozilla"
-MOZ_SRC_URI="${MOZ_HTTP_URI}/${MOZ_PV}/source/${PN}-${MOZ_PV}.source.tar.xz"
+MOZ_SRC_URI="${MOZ_HTTP_URI}/${PV}/source/${PN}-${PV}.source.tar.xz"
 
 LLVM_MAX_SLOT=10
 
